@@ -49,6 +49,8 @@ endif::[]
 * Fix ability to disable agent on startup wasn't working for runtime attach {pull}1444[1444]
 * Avoid `UnsupportedOperationException` on some spring application startup {pull}1464[1464]
 * Fix ignored runtime attach `config_file` {pull}1469[1469]
+* Fix `IllegalAccessError: Module 'java.base' no access to: package 'java.lang'...` in J9 VMs of Java version >= 9 -
+  {pull}1468[#1468]
 
 ===== Refactors
 * Migrate some plugins to indy dispatcher {pull}1404[1404] {pull}1411[1411]
